--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     volumes:
       - ./data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=DB
+      - POSTGRES_DB=db
       - POSTGRES_USER=user_login
       - POSTGRES_PASSWORD=9mREsvXDs9Gk89Ef
